# cosmic-memory

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.md
benchmarks/: active_recall_benchmark.py  passive_recall_benchmark.py  retrieval_modes_benchmark.py
docs/: architecture.md
src/cosmic_memory/: __init__.py  control_surface.py  core_facts.py  dev_service.py  env.py  episode_ingestion.py  filesystem_service.py  ontology_curator.py  retrieval.py  service.py  usage.py
src/cosmic_memory/domain/: __init__.py  enums.py  models.py
src/cosmic_memory/embeddings/: __init__.py  base.py  hash.py  perplexity.py
src/cosmic_memory/extraction/: __init__.py  base.py  deterministic.py  models.py  normalize.py  xai.py
src/cosmic_memory/graph/: __init__.py  adjudication.py  base.py  dev_store.py  entity_index.py  entity_qdrant.py  fact_adjudication.py  identity.py  ingestion.py  models.py  neo4j_store.py  (+6 more)
tests/: __init__.py  test_agent_surface.py  test_app_config.py  test_core_facts.py  test_dev_service.py  test_embeddings.py  test_episode_ingestion.py  test_filesystem_service.py  test_graph_dev_store.py  test_graph_extraction.py  test_graph_identity.py  test_graph_memory_service.py  test_graph_query.py  test_graph_search_recipes.py  test_index_control.py  test_index_integration.py  test_markdown_layout.py  test_markdown_store.py  test_neo4j_store.py  test_neo4j_store_integration.py  test_ontology_curator.py  test_passive_recall.py  test_qdrant_smoke.py  test_registry.py  test_retrieval.py  test_server.py  test_usage_logging.py  tests_support.py
(+11 files in other folders)
