[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-memory"
version = "0.1.0"
description = "Cosmic memory layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "perplexityai>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "qdrant-client>=1.15.2,<2.0",
  "typing-extensions>=4.12,<5.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]
graph = [
  "neo4j>=5.26,<6.0",
]
qdrant-local = [
  "fastembed>=0.7,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
